# meta

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.mit  LICENSE.ncsa  Makefile  PACKAGING.md  README.md  RELEASING.md  STYLE.md  TODO.txt  _config.yml  allpairs.cpp  analyzers-filters-tutorial.md  cachetest.cpp  chunker-train.cpp  classify-test.cpp  classify-tutorial.md  classify.cpp  cluster-test.cpp  compress.cpp  compressed_file_writer.cpp  config.ini  config.toml  corpus-gen.cpp  crf-feat-gen.cpp  crf-test.cpp  crf-train.cpp  document.cpp  document.h  eval.cpp  eval.rb  feature-select.cpp  (+74 more)
contrib/biicode/: CMakeLists.txt  README.md  biicode.conf
src/: CMakeLists.txt  select.cpp
src/analyzers/: CMakeLists.txt  analyzer.cpp  analyzer_factory.cpp  diff_analyzer.cpp  filter_factory.cpp  libsvm_analyzer.cpp  multi_analyzer.cpp
src/analyzers/filters/: CMakeLists.txt  alpha_filter.cpp  blank_filter.cpp  empty_sentence_filter.cpp  english_normalizer.cpp  filter_factory.cpp  icu_filter.cpp  length_filter.cpp  list_filter.cpp  lowercase_filter.cpp  porter2_filter.cpp  porter2_stemmer.cpp  ptb_normalizer.cpp  sentence_boundary.cpp
src/analyzers/ngram/: CMakeLists.txt  ngram_analyzer.cpp  ngram_char_analyzer.cpp  ngram_fw_analyzer.cpp  ngram_lex_analyzer.cpp  ngram_pos_analyzer.cpp  ngram_simple_analyzer.cpp  ngram_word_analyzer.cpp
src/analyzers/tokenizers/: CMakeLists.txt  character_tokenizer.cpp  icu_tokenizer.cpp  whitespace_tokenizer.cpp
src/analyzers/tools/: CMakeLists.txt  (+1 more)
src/classify/: CMakeLists.txt  binary_classifier_factory.cpp  classifier.cpp  classifier_factory.cpp  confusion_matrix.cpp  knn.cpp  liblinear_svm.cpp  linear_svm.cpp  naive_bayes.cpp  perceptron.cpp  select.cpp  select_chi_square.cpp  select_corr.cpp  select_doc_freq.cpp  select_info_gain.cpp  select_odds.cpp  select_simple.cpp  select_slda.cpp
src/cluster/: similarity.tcc
src/corpus/: CMakeLists.txt  corpus.cpp  corpus_factory.cpp  document.cpp  document_vector.cpp  file_corpus.cpp  gz_corpus.cpp  libsvm_corpus.cpp  line_corpus.cpp  metadata.cpp  metadata_parser.cpp  trec_corpus.cpp
src/embeddings/: CMakeLists.txt  cooccurrence_counter.cpp  word_embeddings.cpp
src/features/: CMakeLists.txt  chi_square.cpp  correlation_coefficient.cpp  feature_selector.cpp  information_gain.cpp  odds_ratio.cpp  selector_factory.cpp
src/graph/: CMakeLists.txt  dblp_loader.cpp  metapath.cpp
src/index/: CMakeLists.txt  chunk.cpp  chunk_list.cpp  disk_index.cpp  document.cpp  forward_index.cpp  inverted_index.cpp  lexicon.cpp  metadata.cpp  metadata_file.cpp  metadata_parser.cpp  metadata_writer.cpp  okapi_bm25.cpp  postings.cpp  postings_data.cpp  ram_index.cpp  string_list.cpp  string_list_writer.cpp  structs.cpp  vocabulary_map.cpp  vocabulary_map_writer.cpp
src/io/: CMakeLists.txt  compressed_file_reader.cpp  compressed_file_writer.cpp  config_reader.cpp  file_reader.cpp  file_writer.cpp  filesystem.cpp  gzstream.cpp  libsvm_parser.cpp  mmap_file.cpp  parser.cpp  textfile.cpp  xzstream.cpp
src/learn/: CMakeLists.txt  sgd.cpp
src/lm/: CMakeLists.txt  diff.cpp  language_model.cpp  mph_language_model.cpp  sentence.cpp  static_probe_map.cpp  token_list.cpp
src/model/: ngram_distribution.tcc
src/parser/: CMakeLists.txt  evalb.cpp  sequence_extractor.cpp  sr_parser.cpp  state.cpp  state_analyzer.cpp  training_data.cpp  transition.cpp  transition_finder.cpp  transition_map.cpp
src/regression/: CMakeLists.txt  metrics.cpp  regressor_factory.cpp
src/sequence/: CMakeLists.txt  crf.cpp  markov_model.cpp  observation.cpp  perceptron.cpp  sequence.cpp  sequence_analyzer.cpp  trellis.cpp
src/stats/: CMakeLists.txt  optimization.cpp  running_stats.cpp
src/stemmers/: no_stemmer.cpp  porter2.cpp  porter2_stemmer.cpp
src/succinct/: CMakeLists.txt  bit_vector.cpp  compressed_vector.cpp  sarray.cpp
src/test/: CMakeLists.txt  analyzer_test.cpp  classifier_test.cpp  compression_test.cpp  features_test.cpp  filesystem_test.cpp  filter_test.cpp  forward_index_test.cpp  graph_test.cpp  inverted_index_test.cpp  ir_eval_test.cpp  libsvm_parser_test.cpp  lm_test.cpp  metapath_test.cpp  parallel_test.cpp  parser_test.cpp  path_predict_test.cpp  probe_test.cpp  ranker_test.cpp  stemmer_test.cpp  string_list_test.cpp  tokenizer_test.cpp  undirected_graph_test.cpp  unit_test.cpp  unit_tests.cmake  vocabulary_map_test.cpp
src/tokenizers/: libsvm_tokenizer.cpp  multi_tokenizer.cpp  ngram_char_tokenizer.cpp  ngram_fw_tokenizer.cpp  ngram_lex_tokenizer.cpp  ngram_pos_tokenizer.cpp  ngram_simple_tokenizer.cpp  ngram_tokenizer.cpp  ngram_word_tokenizer.cpp  parse_tree.cpp  tokenizer.cpp  tree_tokenizer.cpp
src/tools/: CMakeLists.txt  mph_vocab.cpp  profile.cpp  top_k.cpp
src/topics/: CMakeLists.txt  bl_term_scorer.cpp  default_term_scorer.cpp  inferencer.cpp  lda_cvb.cpp  lda_cvb_inferencer.cpp  lda_gibbs.cpp  lda_model.cpp  lda_scvb.cpp  parallel_lda_gibbs.cpp  slda.cpp  topic_model.cpp  window_lda.cpp
src/utf/: CMakeLists.txt  detail.h  segmenter.cpp  transformer.cpp  utf.cpp
src/util/: CMakeLists.txt  common.tcc  gzstream.cpp  invertible_map.tcc  progress.cpp  utf.cpp
tests/: CMakeLists.txt  analyzer_test.cpp  binary_io_test.cpp  bit_vector_test.cpp  classifier_test.cpp  classifier_test_helper.h  compressed_stream_test.cpp  compressed_vector_test.cpp  compression_test.cpp  corpus_test.cpp  create_config.h  darray_test.cpp  dataset_transform_test.cpp  document_vector_test.cpp  farm_hash_test.h  feature_selection_test.cpp  filesystem_test.cpp  filter_test.cpp  forward_index_test.cpp  graph_test.cpp  hashing_test.cpp  inverted_index_test.cpp  ir_eval_test.cpp  language_model_test.cpp  libsvm_parser_test.cpp  metadata_test.cpp  parallel_test.cpp  parser_test.cpp  perfect_hash_test.cpp  ranker_regression_test.cpp  ranker_test.cpp  regression_test.cpp  sarray_test.cpp  stemmer_test.cpp  string_list_test.cpp  tokenizer_filter_test.cpp  topics_test.cpp  unit_test.cpp  unit_tests.cmake  vector_math_test.cpp  (+1 more)
(+3902 files in other folders)
