project(meta)

add_subdirectory(analyzers)
add_subdirectory(classify)
add_subdirectory(corpus)
add_subdirectory(graph)
add_subdirectory(index)
add_subdirectory(io)
add_subdirectory(lm)
add_subdirectory(parser)
add_subdirectory(sequence)
add_subdirectory(test)
add_subdirectory(tools)
add_subdirectory(topics)
add_subdirectory(utf)
add_subdirectory(util)
