project(meta)

add_subdirectory(analyzers)
add_subdirectory(classify)
add_subdirectory(corpus)
add_subdirectory(embeddings)
add_subdirectory(features)
add_subdirectory(graph)
add_subdirectory(index)
add_subdirectory(io)
add_subdirectory(learn)
add_subdirectory(lm)
add_subdirectory(parser)
add_subdirectory(regression)
add_subdirectory(sequence)
add_subdirectory(stats)
add_subdirectory(succinct)
add_subdirectory(tools)
add_subdirectory(topics)
add_subdirectory(utf)
add_subdirectory(util)
